--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.108.3",
+    "@react-three/fiber": "^8.16.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,7 +14,9 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.10.3",
     "react-scripts": "5.0.1",
+    "source-map-loader": "^5.0.0",
     "tailwindcss": "^3.4.4",
+    "three": "^0.166.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
