--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "babel-plugin-glsl": "^1.0.0",
+    "leva": "^0.9.35",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4"
   }
